--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,13 +22,13 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
     - name: Publish
       run: dotnet publish - c Release -o website
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2.3.1
       with:
-        name: webapp    
+        name: webapp
         path: website/**
         if-no-files-found: warn
